--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <h1>Exceptional</h1>
     <h2>Realty Group</h2>
 
-    <h3><a href="/real-estate-listings.html">Real Estate Listings</a></h3>
-    <h3><a href="/market-report.html">Market Report</a></h3>
-    <h3>Contact</h3>
-    <h3>New Properties</h3>
+    <a href="index.html">About</a>
+    <a href="new-properties.html">New Properties</a>
+    <a href="real-estate-listings.html">Listings</a>
+    <a href="market-report.html">Market Report</a>
+    <a href="contact.html">Contact</a>
+    <a href="http://hud.gov" target='_blank'>H.U.D.</a>
 
     <p align="center">
       <img src="/images/intro-pic.jpg" alt="Welcome to Exceptional Realty Group!" title="Our lobby on a typical busy day" width="">
