Trial commit in new branch

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="http://hud.gov" target='_blank'>H.U.D.</a>
 
     <p align="center">
-      <img src="/images/intro-pic.jpg" alt="Welcome to Exceptional Realty Group!" title="Our lobby on a typical busy day" width="">
+      <img src="images/intro-pic.jpg" alt="Welcome to Exceptional Realty Group!" title="Our lobby on a typical busy day">
     </p>
 
     <p>
